# proy-equipo5-entregable3-semana16

./: .gitignore  README.md  frontend.rar  package-lock.json
backend/: .env  carga_casos_db.py  db_apiweb.db  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: articulos.py  auth.py  clientes.py  mantenimientos.py  ordenes.py  tecnicos.py  ventas.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: models.py  schemas.py
backend/app/services/: articulos.py  auth.py  busqueda.py  clientes.py  mantenimientos.py  ordenes.py  tecnicos.py  ventas.py
sistema-gestion-frontend/: index.html  package-lock.json  package.json  tailwind.config.js
sistema-gestion-frontend/src/: App.jsx  index.css
sistema-gestion-frontend/src/auth/: AuthForm.jsx  Login.jsx  Register.jsx
sistema-gestion-frontend/src/components/: TestConnection.jsx
sistema-gestion-frontend/src/components/layout/: Footer.jsx  Navbar.jsx
sistema-gestion-frontend/src/components/sections/: Articulos.jsx  Clientes.jsx  Dashboard.jsx  Mantenimientos.jsx  Ordenes.jsx  Tecnicos.jsx  Ventas.jsx
sistema-gestion-frontend/src/components/ui/: background-boxes.jsx  bento-grid.jsx  comet-card.jsx  glowing-effect.jsx  modal.jsx
sistema-gestion-frontend/src/context/: AuthContext.jsx
sistema-gestion-frontend/src/hooks/: useApi.js  useAuth.js
sistema-gestion-frontend/src/utils/: constants.js
